--- a/bigbluebutton-html5/private/config/settings.yml
+++ b/bigbluebutton-html5/private/config/settings.yml
@@ -8,23 +8,27 @@ public:
     forceListenOnly: false
     skipCheck: false
     clientTitle: Taderok
-    appName: Taderok SESSION APP
-    bbbServerVersion: 2.2-dev
-    copyright: "©2019 Taderok Inc."
-    html5ClientBuild: HTML5_CLIENT_VERSION
+    appName: Taderok Session
+    bbbServerVersion: 2.2
+    copyright: "©2020 Taderok Inc."
+    html5ClientBuild: 1006
     helpLink: https://taderok.com
     lockOnJoin: true
     cdn: ""
-    basename: "/html5client"
+    basename: "/session"
     askForFeedbackOnLogout: false
     allowUserLookup: false
     enableNetworkInformation: false
     enableLimitOfViewersInWebcam: false
+    enableMultipleCameras: false
     enableTalkingIndicator: true
+    mirrorOwnWebcam: false
     viewersInWebcam: 8
     ipv4FallbackDomain: ""
     allowLogout: true
     allowFullscreen: true
+    remainingTimeThreshold: 30
+    remainingTimeAlertThreshold: 1
     defaultSettings:
       application:
         animations: true
@@ -68,17 +72,14 @@ public:
       openActions:
         accesskey: A
         descId: openActions
-      openStatus:
-        accesskey: S
-        descId: openStatus
     branding:
       displayBrandingArea: false
     connectionTimeout: 60000
     showHelpButton: true
     effectiveConnection:
-      - critical
-      - danger
-      - warning
+    - critical
+    - danger
+    - warning
   externalVideoPlayer:
     enabled: true
   networkMonitoring:
@@ -86,38 +87,134 @@ public:
     packetLostThreshold: 10
   kurento:
     wsUrl: wss://session.taderok.com/bbb-webrtc-sfu
+    # Valid for video-provider. Time (ms) before its WS connection times out
+    # and tries to reconnect.
+    wsConnectionTimeout: 4000
+    cameraTimeouts:
+      # Base camera timeout: used as the camera *sharing* timeout and
+      # as the minimum camera subscribe reconnection timeout
+      baseTimeout: 15000
+      # Max timeout: used as the max camera subscribe reconnection timeout. Each
+      # subscribe reattempt increases the reconnection timer up to this
+      maxTimeout: 60000
     chromeDefaultExtensionKey: akgoaoikmbmhcopjgakkcepdgdgkjfbc
     chromeDefaultExtensionLink: https://chrome.google.com/webstore/detail/bigbluebutton-screenshare/akgoaoikmbmhcopjgakkcepdgdgkjfbc
     chromeExtensionKey: KEY
     chromeExtensionLink: LINK
-    chromeScreenshareSources:
-    - window
-    - screen
-    firefoxScreenshareSource: window
+    screenshare:
+      constraints:
+        video:
+          frameRate:
+            ideal: 5
+            max: 10
+          width:
+            max: 2560
+          height:
+            max: 1600
+        audio: false
+      chromeScreenshareSources:
+      - window
+      - screen
+      firefoxScreenshareSource: window
+    # cameraProfiles is an array of:
+    # - id: profile identifier
+    #   name: human-readable profile name
+    #   bitrate
+    #   hidden: whether this profile will be hidden in the video preview dropdown
+    #   constraints: a video media constraints dictionary (without the video key)
     cameraProfiles:
-      - id: low
-        name: Low quality
-        default: false
-        bitrate: 100
-      - id: medium
-        name: Medium quality
-        default: true
-        bitrate: 200
-      - id: high
-        name: High quality
-        default: false
-        bitrate: 500
-      - id: hd
-        name: High definition
-        default: false
-        bitrate: 800
+    - id: low-u30
+      name: low-u30
+      bitrate: 30
+      hidden: true
+      constraints:
+        frameRate: 3
+    - id: low-u25
+      name: low-u25
+      bitrate: 40
+      hidden: true
+      constraints:
+        frameRate: 3
+    - id: low-u20
+      name: low-u20
+      bitrate: 50
+      hidden: true
+      constraints:
+        frameRate: 5
+    - id: low-u15
+      name: low-u15
+      bitrate: 70
+      hidden: true
+      constraints:
+        frameRate: 8
+    - id: low-u12
+      name: low-u12
+      bitrate: 90
+      hidden: true
+      constraints:
+        frameRate: 10
+    - id: low-u8
+      name: low-u8
+      bitrate: 100
+      hidden: true
+      constraints:
+        frameRate: 10
+    - id: low
+      name: Low
+      default: false
+      bitrate: 100
+    - id: medium
+      name: Medium
+      default: true
+      bitrate: 200
+    - id: high
+      name: High
+      default: false
+      bitrate: 500
+    - id: hd
+      name: High definition
+      default: false
+      bitrate: 800
     enableScreensharing: true
     enableVideo: true
-    enableVideoStats: false
     enableVideoMenu: true
     enableListenOnly: true
     autoShareWebcam: false
     skipVideoPreview: false
+    # Entry `thresholds` is an array of:
+    # - threshold: minimum number of cameras being shared for profile to applied
+    #   profile: a camera profile id from the cameraProfiles configuration array
+    #            that will be applied to all cameras when threshold is hit
+    cameraQualityThresholds:
+      enabled: false
+      thresholds:
+      - threshold: 8
+        profile: low-u8
+      - threshold: 12
+        profile: low-u12
+      - threshold: 15
+        profile: low-u15
+      - threshold: 20
+        profile: low-u20
+      - threshold: 25
+        profile: low-u25
+      - threshold: 30
+        profile: low-u30
+    pagination:
+      # whether to globally enable or disable pagination.
+      enabled: false
+      # how long (in ms) the negotiation will be debounced after a page change.
+      pageChangeDebounceTime: 2500
+      # video page sizes for DESKTOP endpoints. It stands for the number of SUBSCRIBER streams.
+      # PUBLISHERS aren't accounted for .
+      # A page size of 0 (zero) means that the page size is unlimited (disabled).
+      desktopPageSizes:
+        moderator: 0
+        viewer: 5
+      # video page sizes for MOBILE endpoints
+      mobilePageSizes:
+        moderator: 2
+        viewer: 2
   pingPong:
     clearUsersInSeconds: 180
     pongTimeInSeconds: 15
@@ -139,6 +236,7 @@ public:
     time: 5000
   chat:
     enabled: true
+    startClosed: false
     min_message_length: 1
     max_message_length: 5000
     grouping_messages_window: 10000
@@ -157,8 +255,8 @@ public:
     typingIndicator:
       enabled: true
   note:
-    enabled: false
-    url: ETHERPAD_HOST
+    enabled: true
+    url: https://session.taderok.com/pad
     config:
       showLineNumbers: false
       showChat: false
@@ -170,15 +268,19 @@ public:
     hidePresentation: false
   media:
     stunTurnServersFetchAddress: "/bigbluebutton/api/stuns"
+    cacheStunTurnServers: true
+    fallbackStunServer: ''
     mediaTag: "#remote-media"
     callTransferTimeout: 5000
     callHangupTimeout: 2000
     callHangupMaximumRetries: 10
-    echoTestNumber: '9196'
+    echoTestNumber: 'echo'
     relayOnlyOnReconnect: false
+    listenOnlyCallTimeout: 15000
   presentation:
     defaultPresentationFile: default.pdf
     panZoomThrottle: 32
+    restoreOnUpdate: false
     uploadEndpoint: "/bigbluebutton/presentation/upload"
     uploadSizeMin: 0
     uploadSizeMax: 50000000
@@ -214,6 +316,8 @@ public:
     - extension: .odi
       mime: application/vnd.oasis.opendocument.image
     - extension: .jpg
+      mime: image/jpeg
+    - extension: .jpeg
       mime: image/jpeg
     - extension: .png
       mime: image/png
@@ -301,9 +405,10 @@ public:
       - pencil
       - hand
   clientLog:
-    server: { enabled: true, level: info }
-    console: { enabled: true, level: debug }
-    external: { enabled: false, level: info, url: https://LOG_HOST/html5Log, method: POST, throttleInterval: 400, flushOnClose: true, logTag: "" }
+    server: {enabled: true, level: info}
+    console: {enabled: true, level: debug}
+    external: {enabled: false, level: info, url: 'https://LOG_HOST/html5Log', method: POST,
+      throttleInterval: 400, flushOnClose: true, logTag: ""}
 private:
   app:
     host: 127.0.0.1
@@ -312,7 +417,7 @@ private:
     pencilChunkLength: 100
     loadSlidesFromHttpAlways: false
   etherpad:
-    apikey: ETHERPAD_APIKEY
+    apikey: xzN8e2eaKf3WGrnu87MN6I31jALEWCkjQFA1adPpQOgamsOGAnTZh2EM
     version: 1.2.13
     host: 127.0.0.1
     port: 9001
@@ -346,23 +451,23 @@ private:
     heapdump:
       enabled: false
   minBrowserVersions:
-    - browser: chrome
-      version: 59
-    - browser: chromeMobileIOS
-      version: Infinity
-    - browser: firefox
-      version: 52
-    - browser: firefoxMobile
-      version: 52
-    - browser: edge
-      version: 17
-    - browser: ie
-      version: Infinity
-    - browser: safari
-      version: [11, 1]
-    - browser: mobileSafari
-      version: [11, 1]
-    - browser: opera
-      version: 46
-    - browser: electron
-      version: [0, 36]
+  - browser: chrome
+    version: 59
+  - browser: chromeMobileIOS
+    version: Infinity
+  - browser: firefox
+    version: 52
+  - browser: firefoxMobile
+    version: 52
+  - browser: edge
+    version: 17
+  - browser: ie
+    version: Infinity
+  - browser: safari
+    version: [11, 1]
+  - browser: mobileSafari
+    version: [11, 1]
+  - browser: opera
+    version: 46
+  - browser: electron
+    version: [0, 36]
