--- a/bigbluebutton-html5/private/config/settings.yml
+++ b/bigbluebutton-html5/private/config/settings.yml
@@ -15,7 +15,7 @@ public:
     helpLink: https://taderok.com
     lockOnJoin: true
     cdn: ""
-    basename: "/session"
+    basename: "/html5client"
     askForFeedbackOnLogout: false
     allowUserLookup: false
     enableNetworkInformation: false
